feat(typeahead): typeahead -> autocomplete
Added in click and focus so that the autocomplete results popup will be visible and clickable.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ lib-cov
 pids
 logs
 results
-dist
 # test coverage files
 coverage/
 
@@ -21,3 +20,5 @@ node_modules
 npm-debug.log
 
 template/**/*.js
+
+.idea/*
