--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "author": "https://github.com/angular-ui/bootstrap/graphs/contributors",
   "name": "ghs-typeahead",
-  "version": "0.14.2",
+  "version": "0.14.3",
   "homepage": "http://angular-ui.github.io/bootstrap/",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-ngdocs": "~0.1.1",
-    "grunt-conventional-changelog": "~0.1.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-uglify": "~0.3.0",
     "grunt-contrib-watch": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-conventional-changelog": "~0.1.2",
+    "grunt-ddescribe-iit": "0.0.4",
     "grunt-html2js": "~0.2.0",
-    "grunt-karma": "~0.4.4",
+    "grunt-karma": "~0.8.2",
+    "grunt-ngdocs": "~0.1.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "~0.12.31",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-jasmine": "~0.1.5",
     "node-markdown": "0.1.1",
     "semver": "~2.2.0",
-    "shelljs": "~0.2.0",
-    "grunt-ddescribe-iit": "0.0.4"
+    "shelljs": "~0.2.0"
   },
   "license": "MIT"
 }
